# Horus

./: .gitignore  CHANGELOG.md  CMakeLists.txt  ESSENTIAL_FEATURES.md  GEMINI.md  Info.plist.in  README.md  ROADMAP.md  build_log.txt  build_log_full.txt  build_output2.txt  build_output_final.txt  imgui.ini  run.sh
.github/workflows/: release.yml
assets/models/: coco.txt
build2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests[1]_include.cmake
build3/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tactileviewer  cmake_install.cmake  unit_tests  unit_tests[1]_include.cmake  unit_tests[1]_tests.cmake
docs/maestro/: .workspace-root
docs/maestro/plans/: improve_peripheral_detection.md  isolate_hud_telemetry.md  peripheral_detection_design.md
docs/maestro/plans/archive/: hud_isolation_design.md
docs/maestro/state/: improve-peripheral-detection-01.design-gate.json  isolate-hud-telemetry-01.design-gate.json
docs/plans/: 01_calibration.md  02_tracking.md  03_logging.md  04_roi_management.md  05_telemetry.md  06_vector_analysis.md  07_ui_design.md  08_integrity_failsafe.md  09_validation_protocol.md  10_motion_detection.md  11_architecture_refactoring_final.md  12_remaining_work.md  README.md
scripts/: server.py
src/: Application.cpp  Application.hpp  CameraModule.hpp  Common.hpp  HUD.cpp  HUD.hpp  MultiTracker.cpp  SingleTracker.cpp  SingleTracker.hpp  VideoRenderer.cpp
src/core/: Application.cpp  Application.hpp  AudioCapture.cpp  AudioCapture.hpp  AudioEngine.cpp  AudioEngine.hpp  Blackboard.hpp  Common.hpp  DataLogger.cpp  DataLogger.hpp  DossierDatabase.cpp  DossierDatabase.hpp  IModule.hpp  ROIManager.cpp  ROIManager.hpp  UpdateChecker.cpp  UpdateChecker.hpp  main.cpp
src/tracking/: MultiTracker.cpp  MultiTracker.hpp  TrackingSystem.cpp  TrackingSystem.hpp
src/ui/: AnalyzerPanel.cpp  AnalyzerPanel.hpp  AudioVisualizerPanel.cpp  AudioVisualizerPanel.hpp  DevConsolePanel.cpp  DevConsolePanel.hpp  DossierArchivePanel.cpp  DossierArchivePanel.hpp  HUD.cpp  HUD.hpp  MarkdownText.cpp  MarkdownText.hpp  ReplayPanel.cpp  ReplayPanel.hpp  UIManager.cpp  UIManager.hpp  UIManager_Analyzer.cpp  UIManager_CameraView.cpp  UIManager_DevConsole.cpp  UIManager_Export.cpp  UIManager_Panels.cpp  UIManager_Settings.cpp  UIManager_SettingsWindow.cpp  UIManager_internal.hpp
src/vision/: AIAgent.cpp  AIAgent.hpp  CameraModule.cpp  CameraModule.hpp  FaceRecognizer.cpp  FaceRecognizer.hpp  MotionDetector.cpp  MotionDetector.hpp  ObjectDetector.hpp  ReIDManager.cpp  ReIDManager.hpp  VideoRenderer.cpp  VideoRenderer.hpp  VisionSystem.cpp  VisionSystem.hpp
tests/: functional_tests.cpp  integration_tests.cpp  unit_tests.cpp
